force-app/main/default/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <label>Experience</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Experience No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>