force-app/main/default/objects/Experience__c/fields/Experience_Caption__c.field-meta.xml
<CustomField>
    <fullName>Experience_Caption__c</fullName>
    <label>Experience Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>