force-app/main/default/objects/Experience__c/fields/Experience_Meta__c.field-meta.xml
<CustomField>
    <fullName>Experience_Meta__c</fullName>
    <label>Experience Meta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>