force-app/main/default/objects/Experience__c/fields/Experience_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Experience_Subtitle__c</fullName>
    <label>Experience Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>