force-app/main/default/objects/Experience__c/fields/Experience_Title__c.field-meta.xml
<CustomField>
    <fullName>Experience_Title__c</fullName>
    <label>Experience Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>