force-app/main/default/objects/Experience__c/fields/ExperienceText__c.field-meta.xml
<CustomField>
    <fullName>ExperienceText__c</fullName>
    <label>Experience Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>