force-app/main/default/objects/Experience__c/fields/Parent_Experience__c.field-meta.xml
<CustomField>
    <fullName>Parent_Experience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Experience</label>
    <referenceTo>Experience__c</referenceTo>
    <relationshipLabel>Child Experiences</relationshipLabel>
    <relationshipName>Child_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>