force-app/main/default/objects/Experience__c/fields/Prospect_Landing_Zone__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Landing_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Landing Zone</label>
    <referenceTo>Prospect_Landing_Zone__c</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>